--- a/main/resources/TODO.txt
+++ b/main/resources/TODO.txt
@@ -1,5 +1,5 @@
 Setup proxy for NPM:
-npm config set proxy http://proxy.bbn.hp.com:8080
+npm config set proxy http://web-proxy.bbn.hpecorp.net:8080
 
 Install webpack commands:
 npm install webpack --global
